--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         <div class="card-border bg-neutral-900 p-6 rounded-xl h-full flex flex-col">
             <div class="flex items-center mb-5">
                 <!-- Foto de perfil -->
-                <img src="" alt="" class="admin-foto w-16 h-16 rounded-full mr-5 border-2 border-indigo-500">
+                <!-- Actualizado: Se eliminó border-2 y border-indigo-500 -->
+                <img src="" alt="" class="admin-foto w-16 h-16 rounded-full mr-5">
                 <div>
                     <!-- Nombre -->
                     <h3 class="admin-nombre text-2xl font-bold text-white"></h3>
